plugins {
    id 'java'
    id 'application'
}

version = '0.0.4'

repositories {
    mavenCentral()
}

def gdxVersion = '1.12.1'

dependencies {
    implementation "com.badlogicgames.gdx:gdx:$gdxVersion"
    implementation "com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion"
    implementation "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
    implementation "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
    implementation "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
    
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
    testLogging {
        events = ["passed", "skipped", "failed"]
        exceptionFormat = "full"
    }
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

// Configure assets folder for LibGDX
sourceSets {
    main {
        resources {
            srcDirs = ['assets']
        }
    }
}

application {
    mainClass = 'wagemaker.uk.desktop.DesktopLauncher'
}

// Ensure assets are available during development
run {
    workingDir = project.rootDir
}

// Client JAR task (full game with rendering)
jar {
    archiveBaseName = 'woodlanders-client'
    archiveVersion = ''
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    manifest {
        attributes 'Main-Class': application.mainClass
    }
    // Include compiled classes and resources (including assets)
    from sourceSets.main.output
    // Include dependencies
    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
}

// Server JAR task for dedicated server (headless, no rendering)
task serverJar(type: Jar) {
    archiveBaseName = 'woodlanders-server'
    archiveVersion = ''
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    
    manifest {
        attributes 'Main-Class': 'wagemaker.uk.server.DedicatedServerLauncher'
    }
    
    // Include compiled classes
    from sourceSets.main.output
    
    // Include only core dependencies, exclude rendering libraries
    from {
        configurations.runtimeClasspath.findAll { 
            // Only include core LibGDX, exclude rendering backends and natives
            !it.name.contains('lwjgl') && 
            !it.name.contains('backend') && 
            !it.name.contains('platform') &&
            !it.name.contains('freetype') &&
            !it.name.contains('natives')
        }.collect { 
            it.isDirectory() ? it : zipTree(it) 
        }
    }
    
    // Exclude LibGDX rendering and platform-specific classes
    exclude 'com/badlogic/gdx/backends/**'
    exclude 'org/lwjgl/**'
    exclude '**/*.so'
    exclude '**/*.dylib'
    exclude '**/*.dll'
    exclude 'META-INF/*.SF'
    exclude 'META-INF/*.DSA'
    exclude 'META-INF/*.RSA'
    
    // Exclude asset files that are only needed for rendering
    exclude 'sprites/**'
    exclude 'textures/**'
    exclude 'fonts/**'
    exclude 'shaders/**'
    exclude 'sounds/**'
    exclude 'music/**'
}

// Make build task create both JARs
build.dependsOn serverJar
